# ZJU-2021-CG

./: .gitignore  CMakeLists.txt  README.md
glsl/: line.fs  line.vs  normal.fs  normal.vs
include/: Glogic.h  basic.h  camera.h  game.h  light.h  mesh.h  model.h  myUtils.h  obj_sol.h  shader.h  skybox.h  texture.h
resources/models/home/: HumanPlanet.mtl
resources/models/turret1/: turret.mtl  turret_Normal.tga
resources/models/virusLow/: virus.mtl
resources/models/woodbox/: Wooden Crate.mtl
resources/models/woodbox2/: Cube_obj.mtl
src/: Glogic.cpp  basic.cpp  camera.cpp  game.cpp  instance.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  myUtils.cpp  obj_sol.cpp  shader.cpp  skybox.cpp  texture.cpp
